intranet.scss
@import "variables";

$header-color: #333333;
$header-text-color: #fff;
$header-utilitymenu-color: #333333;

$burger-menu-color: #fff;

$breadcrumb-color: #FFFFFF;
$breadcrumb-text-color: #fff;
$breadcrumb-border-color: #004B7B;
$breadcrumb-chevron: $breadcrumb-chevron-gray;

$button-search-background-color: #006666;
$search-border-color: #FFFFFF;
 
$footer-background-color: #272727;
$footer-color: #fff;
$footer-border-color: #272727;

$feature-panel-border-radius: 15px;

@import 
"global-import";

.container.container--fullwidth {
    max-width: 100% !important;
}

.header {
    padding: 0; 
}

footer.footer {
    background: linear-gradient(219deg, rgba(246, 246, 246, 0.02) 0%, rgba(246, 246, 246, 0.02) 20%, rgba(225, 225, 225, 0.02) 20%, rgba(225, 225, 225, 0.02) 40%, rgba(136, 136, 136, 0.02) 40%, rgba(136, 136, 136, 0.02) 60%, rgba(216, 216, 216, 0.02) 60%, rgba(216, 216, 216, 0.02) 80%, rgba(35, 35, 35, 0.02) 80%, rgba(35, 35, 35, 0.02) 100%), linear-gradient(299deg, rgba(213, 213, 213, 0.02) 0%, rgba(213, 213, 213, 0.02) 20%, rgba(150, 150, 150, 0.02) 20%, rgba(150, 150, 150, 0.02) 40%, rgba(161, 161, 161, 0.02) 40%, rgba(161, 161, 161, 0.02) 60%, rgba(186, 186, 186, 0.02) 60%, rgba(186, 186, 186, 0.02) 80%, rgba(28, 28, 28, 0.02) 80%, rgba(28, 28, 28, 0.02) 100%), linear-gradient(50deg, rgba(157, 157, 157, 0.02) 0%, rgba(157, 157, 157, 0.02) 16.667%, rgba(147, 147, 147, 0.02) 16.667%, rgba(147, 147, 147, 0.02) 33.334%, rgba(42, 42, 42, 0.02) 33.334%, rgba(42, 42, 42, 0.02) 50.001%, rgba(214, 214, 214, 0.02) 50.001%, rgba(214, 214, 214, 0.02) 66.668%, rgba(34, 34, 34, 0.02) 66.668%, rgba(34, 34, 34, 0.02) 83.335%, rgba(211, 211, 211, 0.02) 83.335%, rgba(211, 211, 211, 0.02) 100.002%), linear-gradient(278deg, rgba(79, 79, 79, 0.03) 0%, rgba(79, 79, 79, 0.03) 20%, rgba(217, 217, 217, 0.03) 20%, rgba(217, 217, 217, 0.03) 40%, rgba(5, 5, 5, 0.03) 40%, rgba(5, 5, 5, 0.03) 60%, rgba(200, 200, 200, 0.03) 60%, rgba(200, 200, 200, 0.03) 80%, rgba(125, 125, 125, 0.03) 80%, rgba(125, 125, 125, 0.03) 100%), linear-gradient(274deg, rgba(235, 235, 235, 0.03) 0%, rgba(235, 235, 235, 0.03) 12.5%, rgba(100, 100, 100, 0.03) 12.5%, rgba(100, 100, 100, 0.03) 25%, rgba(44, 44, 44, 0.03) 25%, rgba(44, 44, 44, 0.03) 37.5%, rgba(228, 228, 228, 0.03) 37.5%, rgba(228, 228, 228, 0.03) 50%, rgba(36, 36, 36, 0.03) 50%, rgba(36, 36, 36, 0.03) 62.5%, rgba(72, 72, 72, 0.03) 62.5%, rgba(72, 72, 72, 0.03) 75%, rgba(30, 30, 30, 0.03) 75%, rgba(30, 30, 30, 0.03) 87.5%, rgba(109, 109, 109, 0.03) 87.5%, rgba(109, 109, 109, 0.03) 100%), linear-gradient(90deg, #242424, #242424);
}

#headermainmenu {background: #fff;     border-bottom: 1px solid #ebebeb;     min-height: 70px;}


.gi-sitenav__link {
    color: #000;
    &:hover {
        color: #066;
    }
}


.gi-sitelogo--header {
  display: flex;
  padding: 15px 0px;
}

.gi-sitenav__link.gi-sitenav__link--lvl1 {
       text-align: center;
    font-size: 1rem;
    padding: 24px 12px;
    padding-right: 20px; 
}
.gi-sitenav__link[aria-haspopup="true"]::after {
    padding-top: 3px;
    font-size: 1rem; 
    margin-left: 7px;
}

.header__menu, .gi-sitelogo--header { 
    float: none;
    width: 100% !important;
}

.gi-sitenav__list.gi-sitenav__list--lvl1 {
display: flex;
width: 100%;
justify-content: space-around;

}


.container {
    width: 1480px;
    max-width: 100%;
}


.gi-sitesearch.gi-sitesearch--dynamic.gi-sitesearch--top {
  margin-top: -2px;
    margin-left: 20px;
}

.gi-sitesearch__button--search:focus, .gi-sitesearch--dynamic[data-collapsed=false] .btn--search, .gi-sitesearch--dynamic[data-collapsed=true] .btn--search:focus {
    background: $focus-color;
    color: #000 !important;
}
.gi-sitesearch__button--search:focus, .gi-sitesearch--dynamic[data-collapsed=false] .btn--search, .gi-sitesearch--dynamic[data-collapsed=true] .btn--search:focus:after {
    color: #000;
}

.utilitymenu--top { 
    margin-left: auto;padding-top: 15px; padding-bottom: 0px;
}


.gi-sitenav--lvl2 {
   
    background: #fff;
    columns: 2;
    left: 50%;
    transform: translateX(-50%);
    width: 400px;
    border-radius: 6px;
    box-shadow: 0 16px 40px rgba(0, 0, 0, 0.12);
}

.gi-sitenav__item--lvl1:first-child {

    .gi-sitenav--lvl2 {
        left: 0;
        transform: translateX(0);
    }

}
.gi-sitenav__item--lvl1:last-child {

    .gi-sitenav--lvl2 {
        left: auto;
        transform: translateX(0);
        right: 0;
    }

}

.breadcrumb__nav {
    padding: 0;
    border: solid #9b9b9b 1px;
    background-color: #474747; 
}


.utilitymenu--top .utilitymenu__link, .utilitymenu--top .utilitymenu__text {
    border: 0px;
    display: inline;
    padding: 5px 10px;
}


.gi-sitenav--lvl2 {
    padding: 15px 5px;
}

.gi-sitenav__item--lvl2 {
    border-bottom: 0; padding: 10px 0;
    a {
        font-weight: 600;
        color: #006666 !important;
    }
}


.gi-mobilenav--mobilemenu {
    background: #f2f2f2;}
    .sitemenu__link {
        color: #000;
        text-decoration: none;
        display: none; 
    }
    .submenu__link, .submenu__text, .submenu__link:hover, .sitemenu__link:hover {
        color: #000 !important;
    }
    .utilitymenu--mobile .utilitymenu__link, .utilitymenu--mobile .utilitymenu__link:hover{color: #000 !important;}
    .sitemenu__btnimage {
        filter: invert(1);
    }
   
    .sitemenu--mobile .submenu {
        border-bottom: 1px solid #000;
    }


    .utilitymenu--mobile .utilitymenu__item:last-child .utilitymenu__link, .utilitymenu--mobile .utilitymenu__item:last-child .utilitymenu__text {
        border-bottom: 1px solid #000;
    }



@media (max-width: 1300px)
{
    .gi-sitenav__link[aria-haspopup=true]::after {
        
        margin-left: 25px;
    }

    .gi-sitenav__link.gi-sitenav__link--lvl1 {
       
        padding: 12px 12px;
    }


}

 
@media (max-width: 1050px)
{




#headermainmenu, .utilitymenu--top {
    display: none;
}

.gi-mobilenav--mobilemenu { 
    top: 65px !important;
  
}

.gi-sitelogo, .gi-sitelogo__link {
   
    width: 100px;
}

.gi-sitesearch.gi-sitesearch--dynamic.gi-sitesearch--top {
    width: calc(100% - 190px);
    float: left;
}


}

